# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality-checks.yml  linter.yml
gendiff/scripts/: gendiff.py
tests/: test_plain_json.py
